--- a/ibm_hackathon_cookbook.ipynb
+++ b/ibm_hackathon_cookbook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Azure OpenAI Hackathon\n",
-    "**Team: CodeCrusher**\n",
+    "**Team: The Hack Squad**\n",
     "\n",
     "**Industry : Banking**.\n",
     "\n",
